# fastapi-diary

./: .env.prod  .gitignore  .gitmessage.txt  README.md  aerich.ini  asgi.py  debug_test.py  pyproject.toml  pytest.ini
.github/workflows/: checks.yml
app/: database.py  main.py
app/api/: ai.py  auth.py  diarys.py  user.py
app/core/: config.py  gemini_connect.py  jwt.py
app/core/dependencies/: auth.py
app/models/: __init__.py  base_model.py  diaries.py  diary_tags.py  tags.py  token_blacklist.py  users.py
app/schemas/: ai_schema.py  create_diary_schemas.py  diary_tag_schemas.py  get_diary_schemas.py  tag_schemas.py  update_diary_schemas.py  user.py
app/services/: ai_service.py  diary_service.py  gemini_connect.py  prompt.py
app/tests/: test_diary.py  test_gemini.py
app/utils/: base62.py
migrations/models/: 0_20250723151918_init.py  1_20250723111606_None.py  5_20250724154038_None.py
tests/: configtest.py
tests/user/: test_register.py
